k8s/kubectl/nginx.yaml
---
## deployment
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx
  namespace: default
  labels:
    app: nginx
spec:
  selector:
    matchLabels:
      app: nginx
  replicas: 1
  template:
    metadata:
      labels:
        app: nginx
    spec:
      containers:
        - name: nginx
          image: nginx
          ports:
            - name: nginx-port
              containerPort: 80
          resources:
            requests:
              cpu: '1'
              memory: 500M
            limits:
              cpu: '1'
              memory: 1Gi

---
## service
apiVersion: v1
kind: Service
metadata:
  name: nginx
  namespace: default
spec:
  selector: 
    app: nginx
  type: ClusterIP
  ports:
    - port: 8080
      protocol: TCP
      targetPort: nginx-port
