k8s/kubectl/service.yaml
---
## prometheus
apiVersion: v1
kind: Service
metadata:
  name: prometheus
  namespace: monitoring
spec:
  selector: 
    app: prometheus
  type: ClusterIP
  ports:
    - port: 9090
      protocol: TCP
      targetPort: prometheus-port

---
## pushgateway
apiVersion: v1
kind: Service
metadata:
  name: pushgateway
  namespace: monitoring
spec:
  selector: 
    app: pushgateway
  type: ClusterIP
  ports:
    - port: 9091
      protocol: TCP
      targetPort: pushgw-port

---
## alertmanager
apiVersion: v1
kind: Service
metadata:
  name: alertmanager
  namespace: monitoring
spec:
  selector: 
    app: alertmanager
  type: ClusterIP
  ports:
    - port: 9093
      protocol: TCP
      targetPort: alertmgr-port

---
## grafana
apiVersion: v1
kind: Service
metadata:
  name: grafana
  namespace: monitoring
spec:
  selector: 
    app: grafana
  type: ClusterIP
  ports:
    - port: 3000
      protocol: TCP
      targetPort: grafana-port

---
## loki
apiVersion: v1
kind: Service
metadata:
  name: loki
  namespace: monitoring
spec:
  selector: 
    app: loki
  type: ClusterIP
  ports:
    - port: 3100
      protocol: TCP
      targetPort: loki-port
