k8s/kubectl/ingress.yaml
---
## prometheus
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: prometheus-ingress
  namespace: monitoring
  annotations:
    nginx.ingress.kubernetes.io/use-regex: 'true'
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  ingressClassName: nginx
  rules:
  - host: monitoring.unity.com
    http:
      paths:
      - path: /prometheus(/|$)(.*)
        pathType: ImplementationSpecific
        backend:
          service:
            name: prometheus
            port:
              number: 9090

---
## grafana
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: grafana-ingress
  namespace: monitoring
  annotations:
    nginx.ingress.kubernetes.io/use-regex: 'true'
    nginx.ingress.kubernetes.io/rewrite-target: /grafana/$2
spec:
  ingressClassName: nginx
  rules:
  - host: monitoring.unity.com
    http:
      paths:
      - path: /grafana(/|$)(.*)
        pathType: ImplementationSpecific
        backend:
          service:
            name: grafana
            port:
              number: 3000

---
## pushgateway
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: pushgateway-ingress
  namespace: monitoring
  annotations:
    nginx.ingress.kubernetes.io/use-regex: 'true'
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  ingressClassName: nginx
  rules:
  - host: monitoring.unity.com
    http:
      paths:
      - path: /pushgateway(/|$)(.*)
        pathType: ImplementationSpecific
        backend:
          service:
            name: pushgateway
            port:
              number: 9091

---
## loki
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: loki-ingress
  namespace: monitoring
  annotations:
    nginx.ingress.kubernetes.io/use-regex: 'true'
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  ingressClassName: nginx
  rules:
  - host: monitoring.unity.com
    http:
      paths:
      - path: /loki(/|$)(.*)
        pathType: ImplementationSpecific
        backend:
          service:
            name: loki
            port:
              number: 3100

---
## consul
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: consul-ingress
  namespace: monitoring
  annotations:
    nginx.ingress.kubernetes.io/use-regex: 'true'
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  ingressClassName: nginx
  rules:
  - host: monitoring.unity.com
    http:
      paths:
      - path: /consul(/|$)(.*)
        pathType: ImplementationSpecific
        backend:
          service:
            name: consul
            port:
              number: 8500

---
## consul-ui
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: consul-ui-ingress
  namespace: monitoring
  annotations:
    nginx.ingress.kubernetes.io/use-regex: 'true'
    nginx.ingress.kubernetes.io/rewrite-target: /ui/$2
spec:
  ingressClassName: nginx
  rules:
  - host: monitoring.unity.com
    http:
      paths:
      - path: /ui(/|$)(.*)
        pathType: ImplementationSpecific
        backend:
          service:
            name: consul
            port:
              number: 8500
